--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@angular/router": "~8.2.14",
     "bootstrap": "^4.3.1",
     "moment": "^2.27.0",
+    "ngx-material-file-input": "^2.1.0",
     "ngx-spinner": "^8.1.0",
+    "ngx-toastr": "^11.3.3",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
