--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@auth0/angular-jwt": "^5.0.1",
     "bootstrap": "^4.3.1",
     "moment": "^2.27.0",
     "ngx-material-file-input": "^2.1.0",
