--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "@auth0/angular-jwt": "^5.0.1",
+    "@stomp/ng2-stompjs": "^7.2.0",
+    "@types/sockjs-client": "^1.1.1",
     "bootstrap": "^4.3.1",
     "moment": "^2.27.0",
     "ngx-material-file-input": "^2.1.0",
